syntax = "proto3";

package cache;
option go_package = "gocache";

message GetCacheRequest {
  string key = 1;
}

message GetCacheResponse {
  bytes value = 1;
  bool success = 3;
}

message SaveCacheRequest {
  string key = 1;
  int64 life = 2; //seconds
  bytes value = 3;
}

message Empty {

}

service cacheService {
  rpc GetCache (GetCacheRequest) returns (GetCacheResponse) {};
  rpc SaveCache (SaveCacheRequest) returns (Empty) {};
  rpc ClearCache (Empty) returns (Empty) {};
}